anypoint-connector-devkit/v/3.6/index.adoc
= Anypoint Connector DevKit
:keywords: devkit, development, features, architecture

The *MuleSoft Anypoint DevKit*, or simply *DevKit*, enables the development of MuleSoft Anypoint Connectors.

A MuleSoft connector is an extension module to the MuleSoft Anypoint Platform, with modules that ease the interconnection of third-party systems and APIs with Mule applications.

*Starting Tutorial*:  link:/anypoint-connector-devkit/v/3.6/tutorial-barn-connector[Tutorial - Barn Connector]

*Webinar*: https://www.mulesoft.com/webinars/saas/building-powerful-connector-scratch[Building a Powerful Connector from Scratch]

== *Prerequisites*

* Explore the http://www.mulesoft.com/exchange[Anypoint Exchange] for existing connectors.
* Install link:https://www.mulesoft.com/studio[Anypoint Studio], link:http://www.oracle.com/technetwork/java/javase/downloads/index.html[Java version 8], link:/anypoint-connector-devkit/v/3.6/setting-up-your-dev-environment#SettingUpYourDevEnvironment-ApacheMaven[Apache Maven], and the http://www.mulesoft.org/documentation/display/current/Setting+Up+Your+Dev+Environment#SettingUpYourDevEnvironment-DevKitPlugin[Anypoint DevKit Plugin].
* Get access to a sandbox environment for testing your connector with the target resource before taking your connector into production.
* If you are migrating a connector from Mule 3.5 to 3.6, see link:/release-notes/connector-migration-guide-mule-3.5-to-3.6[Connector Migration Guide - Mule 3.5 to 3.6].

== Development Steps

. link:/anypoint-connector-devkit/v/3.6/setting-up-your-dev-environment[Set up your development environment] - Install Java JDK version 8, Apache Maven, Anypoint Studio, and Anypoint DevKit Plugin to build and test your connector. You can develop a connector using Windows, Mac, or Linux.
. _New Connector_ - link:/anypoint-connector-devkit/v/3.6/creating-an-anypoint-connector-project[Create an Anypoint project] - Set up Anypoint Studio and install the connector plugin.  +
 _Existing Connector_ - To import an existing connector project, click *File* > *Import* > *Anypoint Studio* > *Anypoint Connector Project from External Location*, choose a URL or a .zip file, and complete the wizard to locate and import the project.
. link:/anypoint-connector-devkit/v/3.6/setting-up-api-access[Determine resource access] - Each resource has a different access method, such as REST, SOAP, FTP, or the Java SDK features.
. link:/anypoint-connector-devkit/v/3.6/authentication[Choose an authentication mechanism] - Mule supports OAuth V1 or V2, and username and password authentication (known as link:/anypoint-connector-devkit/v/3.6/connection-management[connection management]), which can be used for protocols such as API Key, SAML, NTLM, Kerberos, or LDAP.
. link:/anypoint-connector-devkit/v/3.6/defining-attributes-operations-and-data-model[Choose the connector's data model] - Models can be static Java objects or dynamic objects. You can use link:/mule-user-guide/v/3.6/datasense[DataSense] - Determine what information the target resource expects.
. link:/anypoint-connector-devkit/v/3.6/defining-connector-attributes[Add connector @ attribute annotations] - Create code for your connector containing the @ attributes that Mule uses to designate the important parts of your connector.
. link:/anypoint-connector-devkit/v/3.6/developing-devkit-connector-tests[Code tests] - Tests can be unit tests, functional tests, and Studio interoperability tests.
. link:/anypoint-connector-devkit/v/3.6/connector-reference-documentation[Document your connector] - MuleSoft provides a template that helps you fill in the blanks to create documentation to help your staff and to help others understand the features and use of your connector.
. link:/anypoint-connector-devkit/v/3.6/packaging-your-connector-for-release[Package your connector].

== DevKit Features

Features DevKit provides:

* Visual design and implementation using Anypoint Studio with an Eclipse-based interface that simplifies and speeds up development.
* Maven support.
* Connector packaging tools.
* Authentication support for multiple types of authentication, including OAuth and username and password authentication.
* DataSense support to acquire remote metadata.
* Extensive testing capability.
* Examples, training, and support to simplify development startup.
* Batch, Query Pagination, and DataSense Query Language support.

DevKit is a annotations-based tool, with a wide set of available annotations to support its features. For a complete list of DevKit annotations, see the link:/anypoint-connector-devkit/v/3.6/annotation-reference[Annotation Reference].

== What is a Connector?

An Anypoint connector is an extension module that eases the interaction between a Mule application and external resources, such as a databases or APIs, through REST, SOAP, or the Java SDK.

As reusable components that hide API complexity from the integration developer, custom connectors facilitate integration with SaaS and on-premise web services, applications, and data sources. Connectors built using Anypoint DevKit in Anypoint Studio, running Mule ESB runtime environments, act as extensions of Mule Anypoint Platform.

=== Connector Architecture

Connectors operate within Mule applications, which are built up from Mule Flows, and external resources, which are the targeted resources.

image:DevKitOverviewArchitecture.png[DevKitOverviewArchitecture]

A Mule connector has two operational sides. The Mule-facing side communicates with a resource’s target-facing client side to enable content to travel between the Mule applications, and the external target-facing resource.

==== Mule-Facing Functionality

From the Mule-facing side, a connector consists of:

* *Main Java class*. Java code that you annotate with the @Connector attribute. See the  link:/anypoint-connector-devkit/v/3.6/annotation-reference[Annotation Reference] for information about Anypoint Connector DevKit annotations. See  http://en.wikipedia.org/wiki/Java_annotation[Java annotations] for information on how annotations work. 
* *Connector attributes*. Properties of the @Connector class that you annotate with the @Configurable attribute. 
* *Methods*. Functionality that you annotate with the @Processor attribute.

Additional annotations define authentication-related functionality, such as connection management. Annotations allow you to control the layout of the Anypoint Studio dialogues for the connector as well. The data model and exceptions that either raise or propagate are also Mule-facing classes.

DevKit generates a scaffold connector when you create your Anypoint Connector project in Studio. This scaffold connector includes the @Connector class, the @Configurable attributes, the @Processor methods, and authentication logic to build out your connector.

==== Target-Facing Functionality

The target facing or client facing side of a connector depends on the client technology that enables access to the resource. This functionality consists of a class library and one or more classes that @Connector classes use to access client functionality. This functionality is called the client class.

The client class in turn generally depends on other classes to actually implement calls to the targeted resource. Depending on your target, some of these classes may be generated or provided for you. For example, if you have a Java client library, or are working with a SOAP or REST services, most of the client code is implemented there. In other cases, you have to write the code yourself.

== Coding a Connector

DevKit lets you build connectors from scratch. Before creating your own connector, check the https://www.mulesoft.com/exchange#!/?types=connector&sortBy=name[Anypoint Exchange] for available connectors. The connectors page also lists Community open source connectors that let you contribute to the growing community of public connector development.

==== Connector Data Model

The data model for the connector consists of the objects passed into and out of the exposed operations. While many Web services accept and return XML or JSON data, a proper Mule connector must translate the data format the client uses into Java objects – either POJOs or key-value maps which represent the data objects sent to, and returned from, the target. (Returning raw XML or JSON responses to Mule is one marker for an immature, improperly implemented connector.)

==== REST Versus SOAP

REST simplifies access to HTTP using POST, GET, PUT, and DELETE calls to provide access to creating, getting, putting, and deleting information on a resource.

DevKit provides a set of annotations called @RestCall annotations that helps building a Connector for a RESTful API.

SOAP is a traditional means of communicating with a resource and requires a WSDL file, which is an XML file that specifies all aspects of a Java class’s structure, methods, properties, and documentation. SOAP is an industry standard with tools for governance, building, and schema information.  DevKit provides a tools that helps building a connector using a WSDL file. 

==== Code Sample

The following is an example connector that Anypoint Studio creates for you as a starting point:

[source,java, linenums]
----
/**
 * (c) 2003-2015 MuleSoft, Inc. The software in this package
 *     is published under the terms of the CPAL v1.0 license,
 *     a copy of which has been included with this distribution
 *     in the LICENSE.md file.
 */
package org.mule.modules.myproject;
import org.mule.api.annotations.ConnectionStrategy;
import org.mule.api.annotations.Connector;
import org.mule.api.annotations.Configurable;
import org.mule.api.annotations.Processor;
import org.mule.api.annotations.param.Default;
import org.mule.modules.myproject.strategy.ConnectorConnectionStrategy;
/**
 * Anypoint Connector
 *
 * @author MuleSoft, Inc.
 */
@Connector(name="my-project", schemaVersion="1.0", friendlyName="MyProject")
public class MyProjectConnector
{
    /**
     * Configurable
     */
    @Configurable
    @Default("value")
    private String myProperty;
    @ConnectionStrategy
    ConnectorConnectionStrategy connectionStrategy;
    /**
     * Custom processor
     *
     * {@sample.xml ../../../doc/my-project-connector.xml.sample my-project:my-processor}
     *
     * @param content Content to be processed
     * @return Some string
     */
    @Processor
    public String myProcessor(String content) {
        /*
         * MESSAGE PROCESSOR CODE GOES HERE
         */
        return content;
    }
    /**
     * Set property
     *
     * @param myProperty My property
     */
    public void setMyProperty(String myProperty) {
        this.myProperty = myProperty;
    }
    /**
     * Get property
     */
    public String getMyProperty() {
        return this.myProperty;
    }
    public ConnectorConnectionStrategy getConnectionStrategy() {
        return connectionStrategy;
    }
    public void setConnectionStrategy(ConnectorConnectionStrategy connectionStrategy) {
        this.connectionStrategy = connectionStrategy;
    }
}
----

From this example, you can see a connector starts with the @Connector annotation, and that annotations define functionality, processing, and connection strategy. From this starting point, you add classes that let you access the interface of the resource to which you connect, to process the data, write tests, document your connector, and publish it so that the connector is accessible from Studio.

== Anypoint Connector DevKit Features

As previously mentioned, DevKit supports:

*Authentication Types*

*  link:/anypoint-connector-devkit/v/3.6/connection-management[Connection Management] (username and password authentication)
* link:/anypoint-connector-devkit/v/3.6/oauth-v1[OAuth V1]
* link:/anypoint-connector-devkit/v/3.6/oauth-v2[OAuth V2]
* Other authentication schemes:  link:/anypoint-connector-devkit/v/3.6/authentication-methods[Authentication Methods]

*API Types*

* link:/anypoint-connector-devkit/v/3.6/creating-a-connector-for-a-soap-service-via-cxf-client[SOAP APIs]
* link:/anypoint-connector-devkit/v/3.6/creating-a-connector-for-a-restful-api-using-restcall-annotations[REST APIs]
* link:/anypoint-connector-devkit/v/3.6/creating-a-connector-using-a-java-sdk[Java SDKs]

*Anypoint Platform*

* link:/anypoint-connector-devkit/v/3.6/adding-datasense[DataSense]
* link:/anypoint-connector-devkit/v/3.6/adding-datasense-query-language[DataSense Query Language]
* link:/anypoint-connector-devkit/v/3.6/adding-query-pagination-support[Query Pagination]
* link:/anypoint-connector-devkit/v/3.6/building-a-batch-enabled-connector[Batch]
* link:/anypoint-connector-devkit/v/3.6/installing-and-testing-your-connector-in-studio[Anypoint Studio Support]

*Connector Development Lifecycle*

* link:/anypoint-connector-devkit/v/3.6/setting-up-your-dev-environment[Setting Up a Connector Project]
* link:/anypoint-connector-devkit/v/3.6/creating-an-anypoint-connector-project[Writing Connector Code]
* link:/anypoint-connector-devkit/v/3.6/developing-devkit-connector-tests[Writing Connector Tests]
* link:/anypoint-connector-devkit/v/3.6/connector-reference-documentation[Documenting a Connector Project]
* link:/anypoint-connector-devkit/v/3.6/packaging-your-connector-for-release[Packaging a Connector]

== See Also

[%header,cols="2*"]
|===
|Document |Description
|link:/anypoint-connector-devkit/v/3.6/anypoint-connector-development[Connector Development] |Provides steps to follow from set up to packaging a connector.
|link:/mule-user-guide/v/3.6/anypoint-connectors[Anypoint Connectors] |How to use and implement connectors - this section is in the Mule Runtime docs.
|https://www.mulesoft.com/exchange#!/?types=connector&sortBy=name[Connectors] |Connectors available from MuleSoft or third party sources.
|link:/anypoint-connector-devkit/v/3.6/annotation-reference[Annotations Reference] |Describes DevKit elements that start with an at sign(@), which you can use in your connector to identify classes and functions for Anypoint functionality.
|link:/anypoint-connector-devkit/v/3.6/anypoint-connector-examples[Examples] a|
* link:/anypoint-connector-devkit/v/3.6/tutorial-barn-connector[Tutorial - Barn Connector]
* link:/anypoint-connector-devkit/v/3.6/creating-a-connector-using-a-java-sdk[Creating a Connector Using a Java SDK]
* link:/anypoint-connector-devkit/v/3.6/creating-a-connector-for-a-soap-service-via-cxf-client[Creating a Connector for a SOAP Service Via CXF Client]
* link:/anypoint-connector-devkit/v/3.6/creating-a-connector-for-a-restful-api-using-jersey[Creating a Connector for a RESTful API Using Jersey]
* link:/anypoint-connector-devkit/v/3.6/creating-a-connector-for-a-restful-api-using-restcall-annotations[Creating a Connector for a RESTful API using @RESTCall Annotations]

|===
